# Kursowaya4

./: README.md  pyproject.toml
src/: ABCClass.py  HHApi.py  JSONSaver.py  UserInteract.py  Vacancy.py  main.py
tests/: test_HHApi.py  test_JSONSaver.py  test_UserInteract.py  test_Vacancy.py
